--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+main {
+    background-image: image(src="https://static.wixstatic.com/media/f61af8_e15083b95c954f71a1b4d9a5a78ded70~mv2_d_2121_1312_s_2.jpg/v1/fill/w_1899,h_849,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/f61af8_e15083b95c954f71a1b4d9a5a78ded70~mv2_d_2121_1312_s_2.jpg");
+}
+
 header {
     height: 68px;
-    background-color: #FFE5CE;
+    background-color: #95c095;
     display: flex;
     align-items: center;
 }
@@ -82,14 +86,18 @@ header * {
 }
 
 .cards-area .card .card-body {
-    width: 261px;
-    height: 132px;
+    width: 159px;
+    height: 80px;
     position: absolute;
     background-color: #faaa62;
-    top: 200px;
+    top: 240px;
     left: 0px;
     right: 0px;
     margin: auto;
+}
+
+.card-body :hover {
+    color: #186e35;
 }
 
 .cards-area .card .card-body h5 {
@@ -126,13 +134,25 @@ header * {
 }
 
 .cards-area .card:nth-child(2) .card-body {
-    background-color: #EAF2F5;
+    background-color: #FFE5CE;
 }
 
 .cards-area .card:last-child .card-body {
-    background-color: #E8F3E4;
+    background-color: #FFE5CE;
 }
 
+
+.cards-area .card:first-child .card-body :hover {
+    background-color: #186e35;
+}
+
+.cards-area .card:nth-child(2) .card-body :hover {
+    background-color: #186e35;
+}
+
+.cards-area .card:last-child .card-body :hover {
+    background-color: #186e35;
+}
 
 .posts-area {
     max-width: 1080px;
