--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ header {
 }
 
 header * {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Merriweather', serif;
+    z-index: 1;
 }
 
 .navbar {
@@ -19,14 +20,15 @@ header * {
 }
 
 .navbar .navbar-collapse ul:first-child li a {
-    color: #2f2e2e;
+    color: #c9a1a1;
     font-size: 15px;
     font-weight: 300;
     transition: 500ms;
 }
 
+
 .navbar .navbar-collapse ul:first-child li a:hover {
-    color: #faaa62 !important;
+    color: #ffffff !important;
 }
 
 .navbar .navbar-collapse ul:last-child i {
@@ -40,23 +42,23 @@ header * {
 }
 
 .active {
-    color: #faaa62 !important;
+    color: #ffffff !important;
 }
 
 .banner-area h3 {
     text-align: center;
     margin-bottom: 0px;
     letter-spacing: 2px;
-    font-size: 16px;
-    font-weight: 300;
-    color: #2f2e2e;
+    font-size: 20px;
+    font-weight: 600;
+    color: #c9a1a1;
 }
 
 .banner-area h1 {
     text-align: center;
     font-family: 'Playfair Display', serif;
     font-size: 50px;
-    color: #2f2e2e;
+    color: #c9a1a1;
     font-weight: 700;
     letter-spacing: 1.3px;
 }
@@ -65,11 +67,12 @@ header * {
     width: 100%;
     max-height: 679px;
     object-fit: cover;
+    margin-top: -142px;
 }
 
 .cards-area {
     max-width: 1030px;
-    margin-top: 147px !important;
+    margin-top: -450px !important;
 }
 
 .cards-area .card {
@@ -165,6 +168,7 @@ header * {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    margin-top: 130px;
 }
 
 
@@ -182,7 +186,6 @@ header * {
 
 .posts-area .card-body {
     padding: 38px 31px 20px;
-    background-color: #EAF2F5;
     box-sizing: border-box;
 }
 
@@ -222,6 +225,8 @@ main .card-post img {
 
 .card-post .card-body {
     padding: 28px 40px 35px;
+    margin-top: -125px;
+    position: relative;
 }
 
 
@@ -232,10 +237,10 @@ main .card-post img {
 
 .card-post .card-body .user .user-info span {
     margin: 0px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Playfair Display', serif;    
     font-size: 13px;
     font-weight: 300;
-    color: rgb(65, 65, 65);
+    color: rgb(255, 255, 255);
 }
 
 .card-post .card-body .user .user-info div {
@@ -245,16 +250,16 @@ main .card-post img {
 
 .card-post .card-body h3 {
     font-size: 24px;
-    font-family: 'EB Garamond', serif;
-    color: black;
+    font-family: 'Playfair Display', serif;  
+    color: rgb(255, 255, 255) !important;
     font-weight: 400;
     margin-top: 15px;
     margin-bottom: 19px;
 }
 
 .card-post .card-body p {
-    font-family: 'Roboto', sans-serif;
-    color: black;
+    font-family: 'Playfair Display', serif;  
+    color: rgb(255, 255, 255);
     font-size: 15px;
     letter-spacing: 1.02px;
     font-weight: 300;
@@ -365,10 +370,10 @@ footer {
     padding-top: 60px;
 }
 
-.footer-body h2 {
-    font-family: 'Roboto', sans-serif;
+.footer-body h1 {
+    font-family: 'Merriweather', serif;
     color: #2f2e2e;
-    font-size: 17px;
+    font-size: 30px;
     font-weight: 300;
     text-align: center;
     margin-top: 0px;
@@ -390,14 +395,15 @@ footer {
 }
 
 .footer-body button {
-    width: 100%;
+    width: 20%;
     height: 35px;
-    background-color: #2f2e2e;
+    background-color: #398345;
     border: none;
     color: #fff;
     font-size: 15px;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
+    margin-top: 10px; margin-left: 5px;
 }
 
 footer article {
@@ -406,8 +412,8 @@ footer article {
 
 footer article p {
     margin: 0px;
-    font-size: 15px;
-    font-family: 'Roboto', sans-serif;
+    font-size: 10px;
+    font-family: 'Merriweather', serif;
     font-weight: 300;
     color: #2f2e2e;
 }
